Handle custom generic notification

--- a/client/src/chatrooms.html
+++ b/client/src/chatrooms.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon"
           href="/favicon.png"
           type="image/x-icon">
-    <title>Simultaneous Chatrooms</title>
+    <title>[DEBUG] Dual clients</title>
     <style>
         html,
         body {
