--- a/client/src/chatroom.html
+++ b/client/src/chatroom.html
@@ -7,6 +7,8 @@
           content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible"
           content="ie=edge">
+    <meta name="Description"
+          content="A simple chatroom with websocket & React">
     <link rel="shortcut icon"
           href="/favicon.png"
           type="image/x-icon">
